<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_patientInformation"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_patient_information" />
        <item
            android:id="@+id/nav_deploymentInformation"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_deployment_information" />
        <item
            android:id="@+id/nav_deploymentTime"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_deployment_time" />
    </group>
</menu>