<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_deploymentInformation">

    <fragment
        android:id="@+id/nav_patientInformation"
        android:name="com.example.studienarbeitapp.ui.patientInformation.PatientInformationFragment"
        android:label="@string/menu_patient_information"
        tools:layout="@layout/fragment_patientinformation" />

    <fragment
        android:id="@+id/nav_deploymentInformation"
        android:name="com.example.studienarbeitapp.ui.deploymentInformation.DeploymentInformationFragment"
        android:label="@string/menu_deployment_information"
        tools:layout="@layout/fragment_deploynentinformation" >
        <action
            android:id="@+id/action_nav_deploymentInformation_to_osmFragment"
            app:destination="@id/osmFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_deploymentTime"
        android:name="com.example.studienarbeitapp.ui.deploymentTime.DeploymentTimeFragment"
        android:label="@string/menu_deployment_time"
        tools:layout="@layout/fragment_deploymenttime" />
    <fragment
        android:id="@+id/osmFragment"
        android:name="com.example.studienarbeitapp.OsmFragment"
        android:label="fragment_osm"
        tools:layout="@layout/fragment_osm" />

</navigation>