<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.deploymentTime.DeploymentTimeFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTwoThirds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_percent="0.67"
        android:orientation="vertical"/>

    <TextView
        android:id="@+id/textAlertEntryDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/depltime_textAlertEntryDesc"
        android:layout_marginEnd="4dp"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textAlterEntryTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textview_value_style"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginEnd="4dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAlertEntryDesc" />

    <TextView
        android:id="@+id/textStartDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/depltime_textStartDesc"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAlterEntryTime" />

    <TextView
        android:id="@+id/textStartTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/textview_value_style"
        android:padding="8dp"
        android:textSize="16sp"
        android:layout_marginEnd="4dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStartDesc" />

    <TextView
        android:id="@+id/textArrivalDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/depltime_textArrivalDesc"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textStartTime" />

    <TextView
        android:id="@+id/textArrivalTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/textview_value_style"
        android:padding="8dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArrivalDesc" />

    <TextView
        android:id="@+id/textPatientSecuredDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/depltime_textPatientSecuredDesc"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArrivalTime" />

    <TextView
        android:id="@+id/textPatientSecuredTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/textview_value_style"
        android:padding="8dp"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPatientSecuredDesc" />

    <TextView
        android:id="@+id/textArrival2Desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/depltime_textArrival2Desc"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPatientSecuredTime" />

    <TextView
        android:id="@+id/textArrival2Time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/textview_value_style"
        android:padding="8dp"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArrival2Desc" />

    <TextView
        android:id="@+id/textEndDesc"
        android:layout_marginEnd="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:padding="8dp"
        android:text="@string/depltime_textEndDesc"
        android:textSize="16sp"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textArrival2Time" />

    <TextView
        android:id="@+id/textEndTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/textview_value_style"
        android:padding="8dp"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEndDesc" />

    <Button
        android:id="@+id/buttonEndDeployment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/depltime_buttonEndDeployment"
        android:textStyle="italic"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textEndTime" />

    <Button
        android:id="@+id/buttonStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/depltime_select"
        android:textSize="16sp"
        android:layout_marginStart="4dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintTop_toBottomOf="@+id/textStartDesc" />

    <Button
        android:id="@+id/buttonArrival1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/depltime_select"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintTop_toBottomOf="@+id/textArrivalDesc" />

    <Button
        android:id="@+id/buttonPatientSecured"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/depltime_select"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintTop_toBottomOf="@+id/textPatientSecuredDesc" />

    <Button
        android:id="@+id/buttonArrival2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/depltime_select"
        android:textSize="16sp"
        android:layout_marginStart="4dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintTop_toBottomOf="@+id/textArrival2Desc" />

    <Button
        android:id="@+id/buttonEnd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="4dp"
        android:text="@string/depltime_select"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineTwoThirds"
        app:layout_constraintTop_toBottomOf="@+id/textEndDesc" />

</androidx.constraintlayout.widget.ConstraintLayout>